Overflow quick fix

--- a/css/custom.css
+++ b/css/custom.css
@@ -109,10 +109,6 @@ Website Main color: #079bf5;
 
 /* end of scroll bar */
 
-* {
-  overflow-x: hidden;
-}
-
 body {
   /*
   background-color: rgb(0, 0, 0);
@@ -122,6 +118,7 @@ body {
   margin: 0;
   height: 100%;
   background-color: #000000;
+  overflow-x: hidden;
 }
 
 section {
@@ -234,6 +231,7 @@ nav {
 
 #intro {
   background-color: #000000;
+  overflow-x: hidden;
 }
 
 #intro img {
@@ -267,6 +265,7 @@ h1 {
 
 #about {
   background-color: #0b0b0b;
+  overflow-x: hidden;
 }
 
 .more-about-me {
